Fix css on player card to correct text overflow

--- a/css/style.css
+++ b/css/style.css
@@ -81,11 +81,10 @@ body {
 	display: none;
 }
 
-.playerInfo {
+.playerInfo, .playerStats {
 	margin: 1em;
 	text-align: left;
-	float: left;
-	clear: right;
+	overflow: hidden;
 }
 
 .results {
@@ -103,10 +102,10 @@ body {
 	float: left;
 }
 
-.player {
+.card {
 	clear: both;
 	margin: 2em auto;
-	height: 240px;
+	overflow: auto;
 	background-color: white;
 	border: solid 1px;
 	-webkit-border-radius: 15px;
@@ -115,9 +114,6 @@ body {
 	box-shadow: 0 1px 3px 0 #000000;
 }
 
-.playerStats {
-	margin: 1em 0;
-}
 
 @media only screen and (max-width: 500px) {
 
@@ -166,11 +162,8 @@ body {
     	background-size: cover;
     }
 
-	.player {
+	.card {
 		height: 13em;
 	} 
 
-	.playerInfo {
-		width: 11em;
-	}
 }
